--- a/src/main/java/view/Usuario/VisualizacaoUsuario.fxml
+++ b/src/main/java/view/Usuario/VisualizacaoUsuario.fxml
@@ -42,11 +42,13 @@
           <TableColumn fx:id="colCPFCNPJ" prefWidth="238.0" text="CPF/CNPJ" />
             <TableColumn fx:id="colEmail" prefWidth="247.0" text="Email" />
             <TableColumn fx:id="colTipo" prefWidth="247.0" text="Tipo do Usuario" />
+            <TableColumn fx:id="colAcoes" prefWidth="247.0" text="Ações" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
          </columnResizePolicy>
       </TableView>
       <ComboBox fx:id="comboUsuario" layoutX="157.0" layoutY="120.0" prefHeight="30.0" prefWidth="589.0" promptText="Usuário" styleClass="input-text" />
+      <Button layoutX="780.0" layoutY="535.0" mnemonicParsing="false" onAction="#irCadastroUsuario" prefHeight="35.0" prefWidth="100.0" text="Cadastrar" />
    </children>
 </AnchorPane>
